force-app/main/default/objects/Workflow_Task_Assignee__c/Workflow_Task_Assignee__c.object-meta.xml
<CustomObject>
    <label>Workflow Task Assignee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Task Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>