force-app/main/default/objects/Workflow_Task_Assignee__c/fields/Assignee_Formula_ID__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Formula_ID__c</fullName>
    <formula>IF( ISPICKVAL( Type__c, &quot;User&quot;),  User__r.Id ,  Queue_ID__c )</formula>
    <label>Assignee Formula ID</label>
    <type>Text</type>
</CustomField>