force-app/main/default/objects/Workflow_Task_Assignee__c/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <label>Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>