force-app/main/default/objects/Workflow_Task_Assignee__c/fields/Workflow_Task__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Task__c</fullName>
    <label>Workflow Task</label>
    <referenceTo>Workflow_Task__c</referenceTo>
    <relationshipLabel>Workflow Task Assignees</relationshipLabel>
    <relationshipName>Workflow_Task_Assignees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>